--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,12 @@
-2005-10-16 Daichi Kawahata <daichi@xfce.org>
+2005-10-30  Daichi Kawahata <daichi@xfce.org>
+
+	* libexo-0.3.pot: Added again, because it requires for
+	  translators who are grabbing PO files from `trunk-po' module,
+	  without POT file, it's hard to create initial PO file from
+	  command line (e.g. msginit) or with GUI tools (e.g. KBabel,
+	  poEdit).
+
+2005-10-16  Daichi Kawahata <daichi@xfce.org>
 
 	* de.po, en_GB.po, es.po, fi.po, fr.po, ja.po: Updated.
 
