2005-11-14	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Bump version to 0.3.1.1svn.
	* po/*.po, po/libexo-0.3.pot: Update translations.




(Old svn revision: 18845)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-14	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Bump version to 0.3.1.1svn.
+	* po/*.po, po/libexo-0.3.pot: Update translations.
+
 2005-11-13	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_expose_event): Return FALSE from
