--- a/po/el.po
+++ b/po/el.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1svn-r\n"
+"Project-Id-Version: exo 0.3.1.1svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-14 18:16+0100\n"
 "PO-Revision-Date: 2005-10-15 16:38+0200\n"
