--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,24 @@
+2005-11-15  Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po: Fixed errors.
+	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po:
+	  Bumped version.
+
+2005-11-14  Benedikt Meurer <benny@xfce.org>
+
+	* de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
+	  libexo-0.3.pot: Update translations.
+
+2005-11-06  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: addittion and initial catalan translation of libexo --
+	  paurullan@bulma.net
+
+2005-11-04  Benedikt Meurer <benny@xfce.org>
+
+	* de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po: Merge new
+	  strings.
+
 2005-10-30  Daichi Kawahata <daichi@xfce.org>
 
 	* libexo-0.3.pot: Added again, because it requires for
