2005-11-15	Benedikt Meurer <benny@xfce.org>
	* NEWS: Add note about new ca translations. Remove note about ExoObject.




(Old svn revision: 18865)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-15	Benedikt Meurer <benny@xfce.org>
+
+	* NEWS: Add note about new ca translations. Remove note about ExoObject.
+
 2005-11-14	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Bump version to 0.3.1.1svn.
