--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,11 @@
-0.3.1svn
-========
-- Added a new lightweight object class ExoObject, which is based on the
-  GLib Type System just like GObject, but provides only thread-safe
-  reference counting.
+0.3.1.1svn
+==========
 - Updated the ExoIconView class to support an API compatible to the GtkIconView
   in Gtk+ 2.8, and improve the performance of the icon view.
 - Added a new utility exo-csource, which can generate C source code from
   arbitrary data.
-- New translations: Patricio Carr (es), Stephane Roy (fr), Daichi Kawahata (ja)
+- New translations: Patricio Carr (es), Stephane Roy (fr), Daichi Kawahata (ja),
+                    Pau Rul·lan Ferragut (ca)
 
 
 0.3.0
