--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-16	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-gdk-pixbuf-extensions.c(exo_gdk_pixbuf_scale_ratio): Be sure
+	  to always pass width/height values greater than 0 to
+	  gdk_pixbuf_scale_simple().
+
 2005-11-15	Benedikt Meurer <benny@xfce.org>
 
 	* NEWS: Add note about new ca translations. Remove note about ExoObject.
