--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2005-11-21  Daichi Kawahata <daichi@xfce.org>
+
+	* pt_BR.po: Added Brazilian Portuguese translations by Joao
+	  Pedrosa <joaopedrosa@gmail.com>.
+	* fr.po: Updated French translations by Stephane Roy <sroy@j2n.net>.
+	* de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
+	  libexo-0.3.pot: Updated.
+
 2005-11-15  Daichi Kawahata <daichi@xfce.org>
 
 	* ca.po: Fixed errors.
