Updated Japanese translations.
(Old svn revision: 18958)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,16 @@
+2005-11-28  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
+2005-11-27  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translation.
+
+2005-11-22  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in, ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po,
+	  ja.po, libexo-0.3.pot: Update translations.
+
 2005-11-21  Daichi Kawahata <daichi@xfce.org>
 
 	* pt_BR.po: Added Brazilian Portuguese translations by Joao
