--- a/po/ja.po
+++ b/po/ja.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.1svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-11-22 17:40+0100\n"
-"PO-Revision-Date: 2005-10-10 01:45+0900\n"
+"POT-Creation-Date: 2005-11-28 21:12+0900\n"
+"PO-Revision-Date: 2005-11-28 21:58+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -190,7 +190,7 @@ msgstr "表示欄スペース"
 
 #: exo/exo-icon-view.c:536
 msgid "Space which is inserted between grid column"
-msgstr "グリッド欄の間に挟まれるスペースです"
+msgstr "グリッド欄の間に挟まれるスペースです。"
 
 #: exo/exo-icon-view.c:552
 msgid "Number of columns"
@@ -198,7 +198,7 @@ msgstr "表示欄の数"
 
 #: exo/exo-icon-view.c:553
 msgid "Number of columns to display"
-msgstr "表示する表示欄の数です"
+msgstr "表示する表示欄の数です。"
 
 #: exo/exo-icon-view.c:570
 msgid "Width for each item"
@@ -206,7 +206,7 @@ msgstr "アイテムの幅"
 
 #: exo/exo-icon-view.c:571
 msgid "The width used for each item"
-msgstr "それぞれのアイテムに使用する幅です"
+msgstr "それぞれのアイテムに使用する幅です。"
 
 #: exo/exo-icon-view.c:586
 msgid "Margin"
@@ -214,7 +214,7 @@ msgstr "余白"
 
 #: exo/exo-icon-view.c:587
 msgid "Space which is inserted at the edges of the icon view"
-msgstr "アイテム表示の端に挟まれるスペースです"
+msgstr "アイテム表示の端に挟まれるスペースです。"
 
 #: exo/exo-icon-view.c:603
 msgid "Markup column"
@@ -246,7 +246,7 @@ msgstr "並べ替え可能"
 
 #: exo/exo-icon-view.c:666
 msgid "View is reorderable"
-msgstr "表示は並べ替え可能です"
+msgstr "表示は並べ替え可能です。"
 
 #: exo/exo-icon-view.c:681
 msgid "Row Spacing"
@@ -254,7 +254,7 @@ msgstr "行スペース"
 
 #: exo/exo-icon-view.c:682
 msgid "Space which is inserted between grid rows"
-msgstr "グリッド行の間に挟まれるスペースです"
+msgstr "グリッド行の間に挟まれるスペースです。"
 
 #: exo/exo-icon-view.c:696
 msgid "Selection mode"
@@ -270,7 +270,7 @@ msgstr "スペース"
 
 #: exo/exo-icon-view.c:714
 msgid "Space which is inserted between cells of an item"
-msgstr "アイテムのセルの間に挟まれるスペースです"
+msgstr "アイテムのセルの間に挟まれるスペースです。"
 
 #: exo/exo-icon-view.c:741
 msgid "Selection Box Color"
@@ -302,7 +302,7 @@ msgstr ""
 
 #: exo/exo-toolbars-editor.c:551
 msgid "Separator"
-msgstr "セパレータ"
+msgstr "セパレーター"
 
 #: exo/exo-toolbars-view.c:768
 msgid "Toolbar _Style"
@@ -337,30 +337,28 @@ msgid "Customize Toolbar..."
 msgstr "ツールバーのカスタマイズ..."
 
 #: exo/exo-wrap-table.c:169
-#, fuzzy
 msgid "Column spacing"
-msgstr "表示欄スペース"
+msgstr "表示欄の間隔"
 
 #: exo/exo-wrap-table.c:170
 msgid "The amount of space between two consecutive columns"
-msgstr ""
+msgstr "二つの連続する表示欄の間隔です。"
 
 #: exo/exo-wrap-table.c:184
-#, fuzzy
 msgid "Row spacing"
-msgstr "行スペース"
+msgstr "表示列の間隔"
 
 #: exo/exo-wrap-table.c:185
 msgid "The amount of space between two consecutive rows"
-msgstr ""
+msgstr "二つの連続する表示列の間隔です。"
 
 #: exo/exo-wrap-table.c:199
 msgid "Homogeneous"
-msgstr ""
+msgstr "均質性"
 
 #: exo/exo-wrap-table.c:200
 msgid "Whether the children should be all the same size"
-msgstr ""
+msgstr "子ウィンドウを全て同じサイズにするかどうかを指定します。"
 
 #: exo/exo-xsession-client.c:152
 msgid "Window group"
