2005-11-29	Benedikt Meurer <benny@xfce.org>
	* docs/reference/, exo/exo-binding.h: Update reference documentation.




(Old svn revision: 18963)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-29	Benedikt Meurer <benny@xfce.org>
+
+	* docs/reference/, exo/exo-binding.h: Update reference documentation.
+
 2005-11-22	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-string.{c,h}, exo/exo.symbols: Add exo_intern_string() and
