2005-12-04	Benedikt Meurer <benny@xfce.org>
	* HACKING: Add reminder to increment library major version whenever
	  new functions got added.




(Old svn revision: 18989)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-04	Benedikt Meurer <benny@xfce.org>
+
+	* HACKING: Add reminder to increment library major version whenever
+	  new functions got added.
+
 2005-12-03	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Build the gnuc visibility test program with -Wall
