--- a/HACKING
+++ b/HACKING
@@ -42,7 +42,8 @@ Release process
 ===============
 
   1) Check out a fresh copy from Subversion
-  2) Increment the version number in configure.in.in
+  2) Increment the version number in configure.in.in and the major version
+     number of the library whenever new functions got added
   3) Update NEWS and ChangeLog, and don't forget to add an entry
      ("Released x.y.z") to ChangeLog, so people can see which changes
      were before and after a given release.
