--- a/po/el.po
+++ b/po/el.po
@@ -91,14 +91,17 @@ msgstr ""
 msgid "Please report bugs to <%s>.\n"
 msgstr "Παρακαλούμε αναφέρατε σφάλματα στον <%s>/\n"
 
-#: exo/exo-cell-renderer-ellipsized-text.c:152
-#: exo/exo-ellipsized-label.c:122
+#: exo/exo-cell-renderer-ellipsized-text.c:152 exo/exo-ellipsized-label.c:122
 msgid "Ellipsize"
 msgstr "Χρήση αποσιωπητικών"
 
 #: exo/exo-cell-renderer-ellipsized-text.c:153
-msgid "The preferred place to ellipsize the string, if the cell renderer does not have enough room to display the entire string, if at all"
-msgstr "Η προτιμώμενη θέση για τη χρήση αποσιωπητικών στο αλφαριθμητικό, αν η εργασία απόδοσης κελιού δεν έχει αρκετό χώρο για να το εμφανίσει ολόκληρο"
+msgid ""
+"The preferred place to ellipsize the string, if the cell renderer does not "
+"have enough room to display the entire string, if at all"
+msgstr ""
+"Η προτιμώμενη θέση για τη χρήση αποσιωπητικών στο αλφαριθμητικό, αν η "
+"εργασία απόδοσης κελιού δεν έχει αρκετό χώρο για να το εμφανίσει ολόκληρο"
 
 #: exo/exo-cell-renderer-ellipsized-text.c:163
 msgid "Ellipsize set"
@@ -109,11 +112,14 @@ msgid "Whether this tag affects the ellipsize mode"
 msgstr "Αν αυτή η ετικέτα επηρεάζει τη χρήση αποσιωπητικών"
 
 #: exo/exo-ellipsized-label.c:123
-msgid "The preferred place to ellipsize the string, if the label does not have enough room to display the entire string, if at all"
-msgstr "Η προτιμώμενη θέση για την αποσιώπηση αλφαριθμητικού, αν η ετικέτα δεν έχει αρκετό χώρο για την εμφάνιση ολόκληρου του αλφαριθμητικού"
+msgid ""
+"The preferred place to ellipsize the string, if the label does not have "
+"enough room to display the entire string, if at all"
+msgstr ""
+"Η προτιμώμενη θέση για την αποσιώπηση αλφαριθμητικού, αν η ετικέτα δεν έχει "
+"αρκετό χώρο για την εμφάνιση ολόκληρου του αλφαριθμητικού"
 
-#: exo/exo-icon-bar.c:259
-#: exo/exo-icon-view.c:632
+#: exo/exo-icon-bar.c:259 exo/exo-icon-view.c:632
 msgid "Orientation"
 msgstr "Προσανατολισμός"
 
@@ -121,23 +127,19 @@ msgstr "Προσανατολισμός"
 msgid "The orientation of the iconbar"
 msgstr "Ο προσαναταλισμός του iconbar"
 
-#: exo/exo-icon-bar.c:276
-#: exo/exo-icon-view.c:649
+#: exo/exo-icon-bar.c:276 exo/exo-icon-view.c:649
 msgid "Pixbuf column"
 msgstr "Στήλη Pixbuf"
 
-#: exo/exo-icon-bar.c:277
-#: exo/exo-icon-view.c:650
+#: exo/exo-icon-bar.c:277 exo/exo-icon-view.c:650
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Το μοντέλο στήλης για τη λήψη του pixbuf εικονιδίου"
 
-#: exo/exo-icon-bar.c:292
-#: exo/exo-icon-view.c:729
+#: exo/exo-icon-bar.c:292 exo/exo-icon-view.c:729
 msgid "Text column"
 msgstr "Στήλη κειμένου"
 
-#: exo/exo-icon-bar.c:293
-#: exo/exo-icon-view.c:730
+#: exo/exo-icon-bar.c:293 exo/exo-icon-view.c:730
 msgid "Model column used to retrieve the text from"
 msgstr "Το μοντέλο στήλης για τη λήψη του κειμένου"
 
@@ -157,33 +159,27 @@ msgstr "Ενεργό"
 msgid "Active item index"
 msgstr "Το αντικείμενο που είναι αυτή τη στιγμή ενεργό"
 
-#: exo/exo-icon-bar.c:329
-#: exo/exo-icon-bar.c:330
+#: exo/exo-icon-bar.c:329 exo/exo-icon-bar.c:330
 msgid "Active item fill color"
 msgstr "Χρώμα γεμίσματος ενεργού αντικειμένου"
 
-#: exo/exo-icon-bar.c:336
-#: exo/exo-icon-bar.c:337
+#: exo/exo-icon-bar.c:336 exo/exo-icon-bar.c:337
 msgid "Active item border color"
 msgstr "Χρώμα περιγράμματος ενεργού αντικειμένου"
 
-#: exo/exo-icon-bar.c:343
-#: exo/exo-icon-bar.c:344
+#: exo/exo-icon-bar.c:343 exo/exo-icon-bar.c:344
 msgid "Active item text color"
 msgstr "Χρώμα κειμένου ενεργού αντικειμένου"
 
-#: exo/exo-icon-bar.c:350
-#: exo/exo-icon-bar.c:351
+#: exo/exo-icon-bar.c:350 exo/exo-icon-bar.c:351
 msgid "Cursor item fill color"
 msgstr "Χρώμα γεμίσματος κέρσορα"
 
-#: exo/exo-icon-bar.c:357
-#: exo/exo-icon-bar.c:358
+#: exo/exo-icon-bar.c:357 exo/exo-icon-bar.c:358
 msgid "Cursor item border color"
 msgstr "Χρώμα περιγράμματος κέρσορα"
 
-#: exo/exo-icon-bar.c:364
-#: exo/exo-icon-bar.c:365
+#: exo/exo-icon-bar.c:364 exo/exo-icon-bar.c:365
 msgid "Cursor item text color"
 msgstr "Χρώμα κειμένου κέρσορα"
 
@@ -225,7 +221,9 @@ msgstr "Στήλη επισήμανσης"
 
 #: exo/exo-icon-view.c:604
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Το μοντέλο στήλης για τη λήψη του κειμένου, στην περίπτωση χρήσης σήμανσης Pango"
+msgstr ""
+"Το μοντέλο στήλης για τη λήψη του κειμένου, στην περίπτωση χρήσης σήμανσης "
+"Pango"
 
 #: exo/exo-icon-view.c:618
 msgid "Icon View Model"
@@ -236,8 +234,10 @@ msgid "The model for the icon view"
 msgstr "Το μοντέλο για την προβολή εικονιδίου"
 
 #: exo/exo-icon-view.c:633
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Πως το κείμενο και κάθε στοιχείο τοποθετούνται σχετικά το ένα με το άλλο"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Πως το κείμενο και κάθε στοιχείο τοποθετούνται σχετικά το ένα με το άλλο"
 
 #: exo/exo-icon-view.c:665
 msgid "Reorderable"
@@ -292,8 +292,12 @@ msgid "_Add a new toolbar"
 msgstr "_Προσθήκη μιας Νέας Εργαλειοθήκης"
 
 #: exo/exo-toolbars-editor.c:238
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Σύρετε ένα αντικείμενο στις εργαλειοθήκες παραπάνω για να το προσθέσετε, και από τις εργαλειοθήκες στον πίνακα αντικειμένων για να το αφαιρέσετε."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Σύρετε ένα αντικείμενο στις εργαλειοθήκες παραπάνω για να το προσθέσετε, και "
+"από τις εργαλειοθήκες στον πίνακα αντικειμένων για να το αφαιρέσετε."
 
 #: exo/exo-toolbars-editor.c:551
 msgid "Separator"
@@ -370,4 +374,3 @@ msgstr "Εντολή επανεκκίνησης"
 #: exo/exo-xsession-client.c:164
 msgid "Session restart command"
 msgstr "Εντολή επανεκκίνησης συνεδρίας"
-
