Updated French translations by Stephane Roy <sroy@j2n.net>.
(Old svn revision: 19016)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-10  Daichi Kawahata <daichi@xfce.org>
+
+	* fr.po: Updated French translations by Stephane Roy <sroy@j2n.net>.
+	* de.po, el.po, en_GB.po, es.po, fi.po, pt_BR.po: Updated and
+	  discarded obsolete translations.
+
 2005-11-28  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
