--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.1svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-22 17:40+0100\n"
-"PO-Revision-Date: 2005-11-17 09:16+0100\n"
+"PO-Revision-Date: 2005-12-09 10:43+0100\n"
 "Last-Translator: Stephane Roy <sroy@j2n.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -108,7 +108,7 @@ msgstr ""
 
 #: exo/exo-cell-renderer-ellipsized-text.c:164
 msgid "Whether this tag affects the ellipsize mode"
-msgstr "Si cette balise affecte le mode de mise en ellipse"
+msgstr "Si cette balise affecte ou non le mode de mise en ellipse"
 
 #: exo/exo-ellipsized-label.c:123
 msgid ""
@@ -336,30 +336,28 @@ msgid "Customize Toolbar..."
 msgstr "Personnaliser une barre d'outils..."
 
 #: exo/exo-wrap-table.c:169
-#, fuzzy
 msgid "Column spacing"
 msgstr "Espace de colonne"
 
 #: exo/exo-wrap-table.c:170
 msgid "The amount of space between two consecutive columns"
-msgstr ""
+msgstr "La quantité d'espace entre deux colonnes consécutives"
 
 #: exo/exo-wrap-table.c:184
-#, fuzzy
 msgid "Row spacing"
 msgstr "Espace de ligne"
 
 #: exo/exo-wrap-table.c:185
 msgid "The amount of space between two consecutive rows"
-msgstr ""
+msgstr "La quantité d'espace entre deux lignes consicutives"
 
 #: exo/exo-wrap-table.c:199
 msgid "Homogeneous"
-msgstr ""
+msgstr "Homogène"
 
 #: exo/exo-wrap-table.c:200
 msgid "Whether the children should be all the same size"
-msgstr ""
+msgstr "Si tous les fils ont ou n'ont pas la même taille"
 
 #: exo/exo-xsession-client.c:152
 msgid "Window group"
