--- a/HACKING
+++ b/HACKING
@@ -1,16 +1,16 @@
 Bug tracking system
 ===================
 
-libexo uses the bug tracking system at http://bugs.os-cillation.com/
-hosted and maintained by os-cillation.
+libexo uses the bug tracking system at http://bugzilla.xfce.org/
+hosted and maintained by the Xfce project.
 
 
 Patches
 =======
 
-Please submit patches to the os-cillation bug tracking system or to the
-people listed in the AUTHORS file. Your patch should be in unified diff
-format (the -u option to GNU diff).
+Please submit patches to the Xfce bug tracking system or to the
+people listed in the AUTHORS file. Your patch should be in unified
+diff format (the -u option to GNU diff).
 
 Please and send a patch against a recent version of this package. Patches
 against the Subversion trunk branch are most preferable. You can always
@@ -22,11 +22,11 @@ access the trunk branch from
 Feature requests
 ================
 
-Please file feature requests to the os-cillation bug tracking system
-(http://bugs.os-cillation.com, product libexo) with a Severity of
-enhancement. Make sure that your feature request wasn't reported already
-before; requesting a feature several times won't increase the chance
-that it gets added.
+Please file feature requests to the Xfce bug tracking system
+(http://bugzilla.xfce.org, product libexo) with a Severity of
+enhancement. Make sure that your feature request wasn't reported
+already before; requesting a feature several times won't increase
+the chance that it gets added.
 
 
 Coding Style
