--- a/README
+++ b/README
@@ -22,9 +22,9 @@ The file 'INSTALL' contains generic installation instructions.
 How to report bugs?
 ===================
 
-Bugs should be reported to the os-cillation bug tracking system
-(http://bugs.os-cillation.com, product libexo). You will need to
-create an account for yourself.
+Bugs should be reported to the Xfce bug tracking system
+(http://bugzilla.xfce.org, product libexo). You will need
+to create an account for yourself.
 
 Please read the HACKING file for information on where to send changes
 or bugfixes for this package.
